--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
 
   // 啟用 GPU（若主機已安裝 nvidia-container-toolkit）：
   // 沒裝或沒 GPU 也沒關係，容器仍會用 CPU 啟動。
-  "runArgs": ["--gpus", "all"],
+  "runArgs": ["--gpus", "all","--shm-size", "2gb"],
 
   "workspaceFolder": "/workspaces/edge-diffusion",
   "workspaceMount": "source=/mnt/data/yhworkspace/edge-diffusion,target=/workspaces/edge-diffusion,type=bind,consistency=cached",
