--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,19 @@ datasets/img
 datasets/
 samples/
 checkpoints/
+checkpoints_sa/
+checkpoints_stage2
+checkpoints_sa_v13_ultimate/
+checkpoints_sa_v14_ultimate/
 diffusion_result
+diffusion_result_ca
 images_stage1_sa/
 samples_stage2/
 samples_stage2_vggloss/
 samples_stage2_results/
-64/checkpoints_stage2
-diffusion_result.zip
+samples_stage2_v13_ultimate/
+samples_stage2_v14_ultimate/
+64
 runs
 checkpoints_stage2/
 *.zip
